Ajustar largura do menu

--- a/themes/nostyle/layouts/_default/index.html
+++ b/themes/nostyle/layouts/_default/index.html
@@ -8,7 +8,7 @@
    {{- partial "menu_bar.html" . -}}
    {{- partial "hero.html" . -}}
 
-   <div id="content">
+   <div class="content">
       {{- partial "info.html" . -}}
       {{- partial "history.html" . -}}
       {{- partial "suggest.html" . -}}
