--- a/themes/nostyle/layouts/partials/menu_bar.html
+++ b/themes/nostyle/layouts/partials/menu_bar.html
@@ -1,27 +1,29 @@
-<nav>
-    <div class="logo-mobile">
-        <a href="#home">
-            <img src="{{ $.Site.Params.logotipo | relURL}}" alt="logotipo">
-            <h3>Luciana e Kaio</h3>
-        </a>
-    </div>
-
-    <ul class="nav-links">
-        <div class="logo">
+ <div class="content">
+    <nav>
+        <div class="logo-mobile">
             <a href="#home">
                 <img src="{{ $.Site.Params.logotipo | relURL}}" alt="logotipo">
                 <h3>Luciana e Kaio</h3>
             </a>
         </div>
-        <li><a href="#home">Início</a></li>
-        <li><a href="#history">Nossa História</a></li>
-        <li><a href="#portfolio">Portfólio</a></li>
-        <li><a href="#contato">Contato</a></li>
-    </ul>
 
-    <button class="bars">
-        <span></span>
-        <span></span>
-        <span></span>
-    </button>
-</nav>
+        <ul class="nav-links">
+            <div class="logo">
+                <a href="#home">
+                    <img src="{{ $.Site.Params.logotipo | relURL}}" alt="logotipo">
+                    <h3>Luciana e Kaio</h3>
+                </a>
+            </div>
+            <li><a href="#home">Início</a></li>
+            <li><a href="#history">Nossa História</a></li>
+            <li><a href="#portfolio">Portfólio</a></li>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
+
+        <button class="bars">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+    </nav>
+</div>
