--- a/static/css/base.css
+++ b/static/css/base.css
@@ -41,7 +41,7 @@ body {
 }
 
 /* CONTAINER */
-#content {
+.content {
     position: static;
     display: flex;
     flex-direction: column;
@@ -49,14 +49,14 @@ body {
     padding: 0;
 }
 
-@media(width >=1200px) {
-    #content {
+@media(width >= 1100px) {
+    .content {
         padding: 0 10vw;
     }
 }
 
-@media(width >=1920px) {
-    #content {
+@media(width >= 1910px) {
+    .content {
         padding: 0 20vw;
     }
 }
@@ -266,7 +266,8 @@ a {
 /* FOOTER */
 .footer {
     gap: 30px;
-    padding: 50px 20px;
+    /* padding: 50px 20px; */
+    padding-top: 50px;
 }
 
 @media (width <=960px) {
@@ -286,13 +287,17 @@ a {
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 60px 10px;
+    padding: 60px 0px;
     align-items: center;
     justify-content: center;
-    font-size: 0.7rem;
-
+    
     & p {
         padding: 50px 20px;
+        font-size: 0.7rem;
+    }
+
+    & span {
+        font-size: 0.7rem;
     }
 }
 
