--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -19,7 +19,8 @@ nav {
     left: 0;
     width: 100%;
     margin: 0 auto;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 10px;
+    /* padding: 0.5rem 1rem; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -28,13 +29,25 @@ nav {
     z-index: 1000;
 }
 
+@media(width >=1200px) {
+    nav {
+        padding: 0 10vw;
+    }
+}
+
+@media(width >=1920px) {
+    nav {
+        padding: 0 20vw;
+    }
+}
+
 .nav-links {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    max-width: 1200px;
+    /* max-width: 1200px; */
     gap: 2rem;
     z-index: 1000;
 
@@ -77,7 +90,7 @@ nav {
     transform: rotate(45deg) translate(-6px, -8px);
 }
 
-@media (width <=960px) {
+@media (width <=768px) {
     nav {
         justify-content: space-between;
     }
