--- a/themes/nostyle/layouts/partials/hero.html
+++ b/themes/nostyle/layouts/partials/hero.html
@@ -1,19 +1,20 @@
-<div id="hero-container">
-    {{ $res := where .Site.RegularPages "Params.hero" true }}
-    {{ range $res }}
+<section>
+    <div id="hero-container">
+        {{ $res := where .Site.RegularPages "Params.hero" true }}
+        {{ range $res }}
 
-    <div class="hero-image">
-        <img src="/posts/images/{{ .Params.image }}" alt="{{ .Params.image }}">
-    </div>
-    <div class="hero-cover">
-        <div class="hero-text">
-            <h1 class="hero"> {{ .Title }} </h1>
-            <h2 class="hero">
-                {{ .Params.caption}}
-                {{ .Params.message}}
-            </h2>
+        <div class="image">
+            <img src="/posts/images/{{ .Params.image }}" alt="{{ .Params.image }}">
         </div>
+        <div class="cover">
+            <div class="message">
+                <h1> {{ .Title }} </h1>
+                <h2>
+                    {{ .Params.caption}}
+                    {{ .Params.message}}
+                </h2>
+            </div>
+        </div>
+        {{ end }}
     </div>
-</div>
-
-{{ end }}
+</section>
