--- a/themes/nostyle/layouts/partials/history.html
+++ b/themes/nostyle/layouts/partials/history.html
@@ -1,6 +1,6 @@
 <section id="history">
-    <div class="container">
-        <div class="cards">
+    <div class="section">
+        <div class="content">
             {{ $res := where .Site.RegularPages "Params.history" true }}
 
             {{ range $res }}
