--- a/themes/nostyle/layouts/_default/index.html
+++ b/themes/nostyle/layouts/_default/index.html
@@ -7,14 +7,14 @@
 
    {{- partial "menu_bar.html" . -}}
    {{- partial "hero.html" . -}}
+   {{- partial "history.html" . -}}
 
-   <div class="content">
+   <!-- <div class="content"> -->
       {{- partial "info.html" . -}}
 
-   </div>
+   <!-- </div> -->
 
-   {{- partial "history.html" . -}}
-   {{- partial "dialog.html" . -}}
+   <!-- {{- partial "dialog.html" . -}} -->
 
    <div class="content">
       {{- partial "suggest.html" . -}}
