--- a/themes/nostyle/layouts/partials/footer.html
+++ b/themes/nostyle/layouts/partials/footer.html
@@ -1,37 +1,26 @@
-<footer>
-    <div id="about" class="footer flex">
-        <div class="">
-            <img class="w-100" src="{{ $.Site.Params.logotipo | relURL}}" alt="logotipo">
-        </div>
+<style>
+    .video{
+        display: flex;
+        justify-content: center;
+    }
+</style>
 
-        <div class="container flex">
-            <ul>
-                <li>
-                    <div class="footer-brand">
-                        <span class="fa fa-envelope fa-fw"></span>
-                        <a href="mailto:lucietelima@gmail.com">dra.luciana.lima@gmail.com</a>
-                    </div>
-                </li>
-                <li>
-                    <div class="footer-link">
-                        <span class="fa-brands fa-instagram">&nbsp;</span>
-                        <a href="https://www.instagram.com/luciete.artes/profilecard/?igsh=b212aXpycG4zZHRk">
-                            @dra.luciana.lima
-                        </a>
-                    </div>
-                </li>
-            </ul>
-        </div>
+<footer>
+    <div>
+        <h1 style="padding-bottom: 20px;">Assista Ao Vivo</h1>
+    </div>
+
+    <div class="video">
+        <img style="width: 50%;" src="/posts/images/video.png" alt="tabnail video">
     </div>
 
     <div class="copyright">
-        <hr/>
+        <hr />
         <p>Copyright &copy; {{ time.Now.Year }}
-            <span>Izaias Lima</span>&nbsp;<span>Workforce&nbsp;by&nbsp;templatemo</span>
-            </a>
-            &#8226;&nbsp;Images:&nbsp;<a href="https://freepik.com" target="_blank"
-                rel="nofollow noopener noreferrer">&nbsp;<span>Freepik.com</span>
-            </a>
+            <a href="https://izaias.com.br" target="_blank">
+                Izaias Lima</a>
+            &nbsp;&#8226;&nbsp;
+            Design:&nbsp;<a href="#" target="_blank">Kaio Lucas</a>
         </p>
     </div>
 </footer>
