--- a/themes/nostyle/layouts/partials/hero.html
+++ b/themes/nostyle/layouts/partials/hero.html
@@ -9,10 +9,7 @@
         <div class="cover">
             <div class="message">
                 <h1> {{ .Title }} </h1>
-                <h2>
-                    {{ .Params.caption}}
-                    {{ .Params.message}}
-                </h2>
+                <h2> {{ .Params.message }}</h2>
             </div>
         </div>
         {{ end }}
