--- a/themes/nostyle/layouts/partials/menu_bar.html
+++ b/themes/nostyle/layouts/partials/menu_bar.html
@@ -14,10 +14,11 @@
                     <h3>Luciana e Kaio</h3>
                 </a>
             </div>
-            <li><a href="#home">Início</a></li>
+            
             <li><a href="#history">Nossa História</a></li>
-            <li><a href="#portfolio">Portfólio</a></li>
-            <li><a href="#contato">Contato</a></li>
+            <li><a href="#home">Castelo</a></li>
+            <li><a href="#home">Lista de Presentes</a></li>
+            <li><a href="#portfolio">Asista On-line</a></li>
         </ul>
 
         <button class="bars">
