--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -4,8 +4,15 @@
     align-items: center;
 
     & img {
-        width: 70px;
-        height: 70px;
+        width: 50px;
+        height: 50px;
+    }
+
+    h3 {
+        /* font-family: "MonteCarlo", cursive; */
+        /* font-size: clamp(0.5rem, 0.5vw + 0.5rem, 1.2rem); */
+        font-size: clamp(0.7rem, 1vw + 1rem, 2.3rem);
+        /* font-weight: 100; */
     }
 }
 
@@ -14,28 +21,29 @@
 }
 
 nav {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     margin: 0 auto;
-    padding: 0.5rem 10px;
-    /* padding: 0.5rem 1rem; */
+    margin-top: 15px;
+    padding: 0 15px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: var(--bg-menu);
+    background-color: transparent;
     z-index: 1000;
 }
 
-@media(width >=1200px) {
+@media(width >=1920px) {
     nav {
-        padding: 0 10vw;
+        margin-top: 40px;
+        padding: 0 5vw;
     }
 }
 
-@media(width >=1920px) {
+@media(width >=1400px) {
     nav {
         padding: 0 20vw;
     }
@@ -47,14 +55,18 @@ nav {
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    /* max-width: 1200px; */
+    padding: 10px 90px;
+    border-radius: 50px;
+    background-color: var(--bg-menu);
+    /* background-color: black; */
     gap: 2rem;
     z-index: 1000;
 
     & a {
         display: inline-flex;
         flex-wrap: nowrap;
-        color: var(--secondary-color);
+        font-size: clamp(0.5rem, 0.5vw + 0.5rem, 1.2rem);
+        color: var(--text-color);
         gap: 10px;
     }
 
@@ -67,13 +79,15 @@ nav {
     display: none;
     flex-direction: column;
     cursor: pointer;
+    background-color: var(--menu-color);
 
     & span {
         width: 25px;
         height: 3px;
         margin: 3px 0;
         border-radius: 2px;
-        background-color: var(--secondary-color);
+        background-color: var(--text-color);
+        font-size: 0.3rem;
         transition: 0.3s;
     }
 }
@@ -92,7 +106,8 @@ nav {
 
 @media (width <=768px) {
     nav {
-        justify-content: space-between;
+        height: fit-content;
+        justify-content: center;
     }
 
     .logo {
@@ -100,7 +115,11 @@ nav {
     }
 
     .logo-mobile {
-        display: flex;
+        display: static;
+
+        h3 {
+            font-size: clamp(0.7rem, 1vw + 1rem, 2.3rem);
+        }
 
         & a {
             display: flex;
@@ -119,16 +138,19 @@ nav {
     }
 
     .nav-links {
-        position: fixed;
-        left: 100%;
-        top: 78px;
-        width: 300px;
-        padding: 2rem 0;
+        position: relative;
+        /* top: 78px; */
+        left: -370px;
+        width: 200px;
+        padding: 20px 0;
         flex-direction: column;
         text-align: center;
+        align-self: center;
         transition: 0.3s;
-        background-color: var(--bg-menu);
+        background-color: var(--bg-color);
+        box-shadow: 1px 7px 25px 1px rgba(255, 255, 255, 0.6);
         gap: 0;
+        z-index: 2000;
 
         & li {
             padding: 1rem 0;
@@ -140,6 +162,6 @@ nav {
     }
 
     .nav-links.active {
-        transform: translate(-300px, 0px);
+        transform: translate(90vw, 0px);
     }
 }
