--- a/themes/nostyle/layouts/partials/footer.html
+++ b/themes/nostyle/layouts/partials/footer.html
@@ -6,7 +6,7 @@
 </style>
 
 <footer>
-    <div>
+    <div id="footer">
         <h1 style="padding-bottom: 20px;">Assista Ao Vivo</h1>
     </div>
 
