--- a/themes/nostyle/layouts/partials/menu_bar.html
+++ b/themes/nostyle/layouts/partials/menu_bar.html
@@ -1,24 +1,17 @@
- <div class="content">
+<div class="content">
     <nav>
-        <div class="logo-mobile">
-            <a href="#home">
-                <img src="{{ $.Site.Params.logotipo | relURL}}" alt="logotipo">
-                <h3>Luciana e Kaio</h3>
-            </a>
-        </div>
-
         <ul class="nav-links">
-            <div class="logo">
+            <li class="logo">
                 <a href="#home">
                     <img src="{{ $.Site.Params.logotipo | relURL}}" alt="logotipo">
                     <h3>Luciana e Kaio</h3>
                 </a>
-            </div>
-            
+            </li>
+
             <li><a href="#history">Nossa História</a></li>
-            <li><a href="#home">Castelo</a></li>
-            <li><a href="#home">Lista de Presentes</a></li>
-            <li><a href="#portfolio">Asista On-line</a></li>
+            <li><a href="#info">Castelo</a></li>
+            <li><a href="#suggest">Lista de Presentes</a></li>
+            <li><a href="#footer">Asista On-line</a></li>
         </ul>
 
         <button class="bars">
