--- a/themes/nostyle/layouts/partials/suggest.html
+++ b/themes/nostyle/layouts/partials/suggest.html
@@ -1,6 +1,5 @@
-
 <style>
-    #suggest{
+    #suggest {
         margin: 100px 0;
     }
 </style>
@@ -9,6 +8,10 @@
     <div class="container flex col center">
         <div>
             <h1>Lista sugestões de Presentes</h1>
+            <p>
+                Preparamos uma pequena lista de sugestões de presentes, para facilitar a sua
+                vida, caso você queira nos presentear algo.
+            </p>
         </div>
 
         <div class="cards grid">
