--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,20 +1,9 @@
 :root {
     --bg-color: #121003;
-    --bg-menu: hsl(from var(--bg-color) h s calc(l - 47) / 45%);
     --text-color: #fffcea;
+    --border-color: hsl(from var(--bg-color) h s calc(l + 20));
+    --bg-menu: hsl(from var(--bg-color) h s calc(l - 47) / 45%);
     --text-inverse-color: var(--bg-color);
-
-    --base-color: #e029e3;
-    --primary-color: hsl(from var(--base-color) h s calc(l + 40));
-    --secondary-color: hsl(from var(--base-color) h s calc(l + 35));
-    --bg-section: hsl(from var(--secondary-color) h s calc(l + 95));
-
-    --bg-filter: hsl(from var(--base-color) h s calc(l - 50) / 30%);
-    --bg-header: hsl(from var(--base-color) h s calc(l - 50) / 20%);
-    --bg-card: hsl(from var(--secondary-color) h s calc(l + 7));
-    --bg-message: hsl(from var(--secondary-color) h s calc(l + 10));
-    --bg-input: hsl(from var(--base-color) h s calc(l + 20) / 5%);
-    --bg-input-focus: hsl(from var(--base-color) h s calc(l + 30) / 5%);
 }
 
 * {
@@ -25,44 +14,20 @@
     font-size: 12px;
     text-decoration: none;
     list-style: none;
-    /* background-color: var(--bg-color); */
     box-shadow: none;
     border: none;
-    /* overflow: hidden; */
+    overflow-x: hidden;
 }
 
 html {
-    /* overflow-y: auto; */
     scroll-behavior: smooth;
 }
 
 body {
-
     background-color: var(--bg-color);
 }
 
 /* CONTAINER */
-.section {
-    position: relative;
-    left: 0;
-    width: 100vw !important;
-    width: inherit;
-    background-color: var(--bg-section);
-    background-size: cover;
-
-    .image {
-        top: 0;
-        left: 0;
-        width: inherit;
-
-        & img {
-            width: inherit;
-            aspect-ratio: 16/9;
-            border-radius: 0;
-        }
-    }
-}
-
 .content {
     position: static;
     display: flex;
@@ -75,7 +40,7 @@ body {
         width: 100%;
         display: block;
         height: auto;
-        border-radius: 10px;
+        /* border-radius: 10px; */
     }
 }
 
@@ -184,27 +149,23 @@ body {
 
 /* TEXT */
 p {
+    padding: 0.5em 0;
+    font-size: clamp(0.5rem, 0.4rem + .8vw, 1.3rem);
     color: var(--text-color);
+    text-align: left;
     line-height: 1.2em;
-}
 
-/* span.fa {
-    text-align: left;
-    font-size: 1.3em;
-    color: var(--base-color);
+    & em,
+    strong {
+        font-size: 1em;
+    }
 }
-
-span.fa-brands {
-    text-align: left;
-    font-size: 1.5em;
-    color: var(--base-color);
-} */
 
 img {
     width: 100%;
     display: block;
     height: auto;
-    border-radius: 10px;
+    /* border-radius: 10px; */
 }
 
 h1,
@@ -214,9 +175,9 @@ h3 {
     text-align: center;
     justify-self: center;
     align-self: center;
-    /* padding: 15px 0; */
     line-height: 105%;
     font-weight: 100;
+    overflow: hidden;
 }
 
 h1 {
@@ -277,7 +238,27 @@ a {
     }
 }
 
-@media (width >=960px) {
+.cards.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: left;
+    padding: 25px 0px;
+}
+
+@media(width <=768px) {
+    .cards.grid {
+        padding: 5vw 18vw;
+        display: flex;
+        flex-direction: column;
+        background-color: transparent;
+
+        & p {
+            text-align: center;
+        }
+    }
+}
+
+@media (width >=1920px) {
     .cards {
         padding: 40px 0px;
     }
@@ -287,14 +268,7 @@ a {
     min-width: 380px;
     padding: 20px;
     border-radius: 10px;
-    /* background-color: var(--bg-card); */
 }
-
-/* card.info {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    background-color: transparent;
-} */
 
 .card .image {
     position: static;
@@ -384,7 +358,11 @@ a {
 }
 
 #top-btn span.fa {
-    font-size: 1.9rem;
+    font-size: 3rem;
+    text-align: left;
+    line-height: 3rem;
+    color: var(--border-color);
+    overflow: hidden;
 }
 
 /* FORMS */
