--- a/static/css/hero.css
+++ b/static/css/hero.css
@@ -1,18 +1,17 @@
 #hero-container {
     position: relative;
     width: 100vw;
-    /* margin-top: 95px; */
-    aspect-ratio: 16/9;
+    aspect-ratio: 16/10;
 
     & .cover {
         position: absolute;
         top: 0;
         left: 0;
         width: inherit;
-        padding: 33% 10%;
-        /* aspect-ratio: 16/9; */
-        /* background-color: transparent; */
-        /* background-color: var(--bg-filter); */
+        /* padding: 33% 10%; */
+        padding: 0 10%;
+        padding-top: 33%;
+
         background-size: cover;
     }
 
@@ -30,23 +29,18 @@
     }
 
     & .message {
+        position: static;
+        display: flex;
         flex-direction: column;
         justify-content: start;
     }
 
     h1 {
-        /* font-size: clamp(7rem, 50vw, 7rem); */
         font-size: clamp(3rem, 7vw + 2rem, 9rem);
-        /* font-weight: 100; */
-        /* letter-spacing: 110%; */
-        /* line-height: 120%; */
     }
 
     h2 {
-        /* font-family: "Moon Dance", cursive; */
         font-size: clamp(1rem, 2vw + 0.7rem, 4rem);
-        /* font-weight: 100; */
-        /* color: var(--secondary-color); */
         line-height: 90%;
     }
 }
