--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -1,32 +1,10 @@
-.logo {
-    display: flex;
-    flex: 2;
-    align-items: center;
-
-    & img {
-        width: 50px;
-        height: 50px;
-    }
-
-    h3 {
-        /* font-family: "MonteCarlo", cursive; */
-        /* font-size: clamp(0.5rem, 0.5vw + 0.5rem, 1.2rem); */
-        font-size: clamp(0.7rem, 1vw + 1rem, 2.3rem);
-        /* font-weight: 100; */
-    }
-}
-
-.logo-mobile {
-    display: none;
-}
-
 nav {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     margin: 0 auto;
-    margin-top: 15px;
+    margin-top: 10px;
     padding: 0 15px;
     display: flex;
     flex-direction: row;
@@ -34,6 +12,45 @@ nav {
     align-items: center;
     background-color: transparent;
     z-index: 1000;
+}
+
+nav .logo {
+    display: flex;
+    flex: 2;
+    padding: 10px 0;
+
+    & img {
+        width: 30%;
+    }
+
+    & h3 {
+        text-wrap-mode: nowrap;
+    }
+}
+
+@media (width <=768px) {
+    nav .logo {
+        margin-top: 40px;
+
+        & img {
+            width: 70%;
+        }
+
+        & h3 {
+            display: none;
+        }
+    }
+}
+
+
+@media (width <=768px) {
+    nav {
+        margin-top: 0;
+        padding: 15px 20px;
+        border-radius: 20px;
+        justify-content: end;
+        align-items: start;
+    }
 }
 
 @media(width >=1920px) {
@@ -51,14 +68,14 @@ nav {
 
 .nav-links {
     display: flex;
+    flex: 2;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    padding: 10px 90px;
+    padding: 0px 90px;
     border-radius: 50px;
     background-color: var(--bg-menu);
-    /* background-color: black; */
     gap: 2rem;
     z-index: 1000;
 
@@ -72,6 +89,88 @@ nav {
 
     & a:hover {
         color: var(--primary-color);
+    }
+}
+
+@media (width <=768px) {
+    .nav-links {
+        position: relative;
+        top: -45vh;
+        width: 200px;
+        margin-left: 70px;
+        margin-right: 50px;
+        padding: 25px 0;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        transition: 0.3s;
+        background-color: var(--bg-color);
+        border: solid var(--border-color) 1px;
+        
+        box-shadow: 3px 3px 7px 0px hsl(from var(--bg-color) h s l / 55%) !important;
+        border-radius: 0px 5px 5px;
+
+        gap: 0;
+        z-index: 2000;
+
+        & li {
+            padding: 1rem 0;
+        }
+
+        & a {
+            font-size: 1.2rem;
+        }
+    }
+
+    .nav-links.active {
+        transform: translate(-0vw, 38vh);
+        transition: transform 0.7s ease-in-out;
+    }
+}
+
+.logo {
+    display: flex;
+    flex: 2;
+    align-items: center;
+
+    & img {
+        width: 50px;
+        height: 50px;
+    }
+
+    h3 {
+        font-size: clamp(0.7rem, 1vw + 1rem, 2.3rem);
+    }
+}
+
+@media (width <=768px) {
+    .logo {
+        display: none;
+    }
+}
+
+.logo-mobile {
+    display: block;
+}
+
+@media (width <=768px) {
+    .logo-mobile {
+        display: static;
+
+        h3 {
+            font-size: clamp(0.7rem, 1vw + 1rem, 2.3rem);
+        }
+
+        & a {
+            display: flex;
+            flex-wrap: nowrap;
+            gap: 10px;
+        }
+
+        & img {
+            width: 50px;
+            height: 50px;
+        }
     }
 }
 
@@ -92,6 +191,12 @@ nav {
     }
 }
 
+@media (width <=768px) {
+    .bars {
+        display: flex;
+    }
+}
+
 .bars.active span:nth-child(1) {
     transform: rotate(-45deg) translate(-5px, 6px);
 }
@@ -102,66 +207,4 @@ nav {
 
 .bars.active span:nth-child(3) {
     transform: rotate(45deg) translate(-6px, -8px);
-}
-
-@media (width <=768px) {
-    nav {
-        height: fit-content;
-        justify-content: center;
-    }
-
-    .logo {
-        display: none;
-    }
-
-    .logo-mobile {
-        display: static;
-
-        h3 {
-            font-size: clamp(0.7rem, 1vw + 1rem, 2.3rem);
-        }
-
-        & a {
-            display: flex;
-            flex-wrap: nowrap;
-            gap: 10px;
-        }
-
-        & img {
-            width: 50px;
-            height: 50px;
-        }
-    }
-
-    .bars {
-        display: flex;
-    }
-
-    .nav-links {
-        position: relative;
-        /* top: 78px; */
-        left: -370px;
-        width: 200px;
-        padding: 20px 0;
-        flex-direction: column;
-        text-align: center;
-        align-self: center;
-        transition: 0.3s;
-        background-color: var(--bg-color);
-        box-shadow: 1px 7px 25px 1px rgba(255, 255, 255, 0.6);
-        gap: 0;
-        z-index: 2000;
-
-        & li {
-            padding: 1rem 0;
-        }
-
-        & a {
-            font-size: 1.2rem;
-        }
-    }
-
-    .nav-links.active {
-        transform: translate(90vw, 0px);
-    }
 }
