--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -48,9 +48,11 @@ nav .logo {
         margin-top: 0;
         /* padding: 15px 20px; */
         padding-top: 15px;
+        margin-left: 1.2vw;
+        /* padding-left: 1vw; */
         /* border-radius: 20px; */
         height: 10vh;
-        justify-content: end;
+        justify-content: space-between;
         align-items: start;
         overflow: unset;
     }
@@ -99,23 +101,17 @@ nav .logo {
     .nav-links {
         position: relative;
         top: -130vh;
-        /* width: 200px; */
-        width: 60vw;
-        height: 60vh;
-        /* margin-left: 70px; */
-        /* margin-right: 50px; */
-        /* padding: 25px 0; */
+        width: 65vw !important;
+        height: 60vh !important;
+        margin-left: 10vw;
+        margin-right: 7vw;
         padding: 25px 10px;
         flex-direction: column;
-        align-items: center;
-        text-align: center;
         transition: 0.3s;
         background-color: var(--bg-color);
         border: solid var(--border-color) 1px;
-
         box-shadow: 3px 3px 7px 0px hsl(from var(--bg-color) h s l / 55%) !important;
         border-radius: 0px 5px 5px;
-
         gap: 0;
         z-index: 2000;
 
